# livesplit-core

./: .devcontainer.json  .gitignore  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  Cross.toml  LICENSE  README.md  appveyor.yml  azure-pipelines.yml
.cargo/: config  config.toml
.github/: dependabot.yml
benches/: balanced_pb.rs  dummy_rendering.rs  layout_state.rs  parsing.rs  scene_management.rs  software_rendering.rs  statistical_pb_chance.rs  svg_rendering.rs
capi/: Cargo.toml
capi/bind_gen/: Cargo.toml
capi/bind_gen/src/: c.rs  csharp.rs  emscripten.rs  java.rs  java_jni.rs  java_jni_cpp.rs  javascript.rs  jni_cpp.rs  main.rs  node.rs  python.rs  ruby.rs  typescript.rs  typescript.ts  wasm.rs  wasm_bindgen.rs
capi/bind_gen/src/java/: jna.rs  jni.rs  mod.rs
capi/bind_gen/src/kotlin/: jni.rs  mod.rs
capi/bind_gen/src/swift/: code.rs  header.rs  mod.rs  module.map  module.modulemap
capi/cdylib/: Cargo.toml
capi/cdylib/src/: lib.rs
capi/js/: Cargo.toml  Makefile  package-lock.json  package.json  tsconfig.json
capi/js/node/: package.json
capi/js/src/: main.rs
capi/src/: analysis.rs  atomic_date_time.rs  attempt.rs  auto_splitting_runtime.rs  blank_space_component.rs  blank_space_component_state.rs  carousel_component.rs  carousel_component_state.rs  command_sink.rs  component.rs  cow_timer.rs  current_comparison_component.rs  current_comparison_component_state.rs  current_pace_component.rs  current_pace_component_state.rs  current_segment_component.rs  delta_component.rs  delta_component_state.rs  detailed_timer_component.rs  detailed_timer_component_state.rs  event_sink.rs  fuzzy_list.rs  general_layout_settings.rs  graph_component.rs  graph_component_state.rs  group_component.rs  group_component_state.rs  hotkey_config.rs  hotkey_system.rs  hotkey_timer.rs  image_cache.rs  key_value_component_state.rs  lang.rs  layout.rs  layout_editor.rs  layout_editor_state.rs  layout_state.rs  lib.rs  linked_layout.rs  parse_run_result.rs  (+50 more)
capi/staticlib/: Cargo.toml
ci/: before_deploy.ps1  before_deploy.sh  install.sh  script.sh
crates/livesplit-auto-splitting/: AutoSplittingNotes.md  Cargo.toml  README.md
crates/livesplit-auto-splitting/src/: environment.rs  lib.rs  pointer.rs  process.rs  runtime.rs  settings.rs  std_stream.rs  timer.rs  wasi_path.rs
crates/livesplit-auto-splitting/src/process/: linux.rs  mod.rs  windows.rs
crates/livesplit-auto-splitting/src/runtime/: mod.rs
crates/livesplit-auto-splitting/src/runtime/api/: mod.rs  process.rs  runtime.rs  setting_value.rs  settings_list.rs  settings_map.rs  timer.rs  user_settings.rs  wasi.rs
crates/livesplit-auto-splitting/src/runtime/api/wasi/: mod.rs  windows.rs
crates/livesplit-auto-splitting/src/settings/: gui.rs  list.rs  map.rs  mod.rs  value.rs
crates/livesplit-auto-splitting/tests/: sandboxing.rs
crates/livesplit-auto-splitting/tests/test-cases/create-file/: Cargo.toml
crates/livesplit-auto-splitting/tests/test-cases/create-file/src/: main.rs
crates/livesplit-auto-splitting/tests/test-cases/empty/: Cargo.toml
crates/livesplit-auto-splitting/tests/test-cases/empty/src/: main.rs
crates/livesplit-auto-splitting/tests/test-cases/env/: Cargo.toml
crates/livesplit-auto-splitting/tests/test-cases/env/src/: main.rs
crates/livesplit-auto-splitting/tests/test-cases/infinite-loop/: Cargo.toml
crates/livesplit-auto-splitting/tests/test-cases/infinite-loop/src/: main.rs
crates/livesplit-auto-splitting/tests/test-cases/poll/: Cargo.toml
crates/livesplit-auto-splitting/tests/test-cases/poll/src/: main.rs
crates/livesplit-auto-splitting/tests/test-cases/proc-exit/: Cargo.toml
crates/livesplit-auto-splitting/tests/test-cases/proc-exit/src/: main.rs
crates/livesplit-auto-splitting/tests/test-cases/random/: Cargo.toml
crates/livesplit-auto-splitting/tests/test-cases/random/src/: main.rs
crates/livesplit-auto-splitting/tests/test-cases/segfault/: Cargo.toml
crates/livesplit-auto-splitting/tests/test-cases/segfault/src/: main.rs
crates/livesplit-auto-splitting/tests/test-cases/sleep/: Cargo.toml
crates/livesplit-auto-splitting/tests/test-cases/sleep/src/: main.rs
crates/livesplit-auto-splitting/tests/test-cases/stdout/: Cargo.toml
crates/livesplit-auto-splitting/tests/test-cases/stdout/src/: main.rs
crates/livesplit-auto-splitting/tests/test-cases/threads/: Cargo.toml
crates/livesplit-auto-splitting/tests/test-cases/threads/src/: main.rs
crates/livesplit-auto-splitting/tests/test-cases/time/: Cargo.toml
crates/livesplit-auto-splitting/tests/test-cases/time/src/: main.rs
crates/livesplit-hotkey/: Cargo.toml
crates/livesplit-hotkey/src/: hotkey.rs  key_code.rs  lib.rs  modifiers.rs
crates/livesplit-hotkey/src/emscripten/: key_code.rs  mod.rs
crates/livesplit-hotkey/src/linux/: evdev_impl.rs  key_code.rs  mod.rs  x11_impl.rs
crates/livesplit-hotkey/src/macos/: ax.rs  carbon.rs  cf.rs  cg.rs  key_code.rs  mod.rs  permission.rs
crates/livesplit-hotkey/src/other/: mod.rs
crates/livesplit-hotkey/src/wasm_unknown/: mod.rs
crates/livesplit-hotkey/src/wasm_web/: key_code.rs  mod.rs
crates/livesplit-hotkey/src/windows/: key_code.rs  mod.rs
crates/livesplit-title-abbreviations/: Cargo.toml
crates/livesplit-title-abbreviations/src/: lib.rs
crates/no-std-test/: Cargo.toml  README.md
docs/: globals.html  index.html
hotkey/: Cargo.toml
hotkey/src/: lib.rs
hotkey/src/emscripten/: mod.rs
hotkey/src/linux/: key_code.rs  mod.rs
hotkey/src/other/: mod.rs
hotkey/src/wasm/: key_code.rs  mod.rs
hotkey/src/windows/: key_code.rs  mod.rs
js/: Cargo.toml  Makefile  exports.js  index.html  livesplit-b2b1086b895854fb.js.mem  livesplit.js  livesplit.ts  tsconfig.json
src/: atomic_date_time.rs  attempt.rs  clear_vec.rs  color.rs  event.rs  hotkey_config.rs  hotkey_system.rs  hotkey_timer.rs  image.rs  image_shrink.rs  image_shrinking.rs  lib.rs  run.rs  run_metadata.rs  segment.rs  segment_history.rs  semantic_color.rs  shared_timer.rs  state_helper.rs  tests_helper.rs  time.rs  time_span.rs  time_stamp.rs  timer.rs  timer_phase.rs  (+3 more)
(+682 files in other folders)
