[package]
name = "livesplit-hotkey"
version = "0.2.0"
authors = ["Christopher Serr <christopher.serr@gmail.com>"]
documentation = "https://docs.rs/livesplit-hotkey/"
repository = "https://github.com/CryZe/livesplit-core/tree/master/hotkey"
license = "Apache-2.0/MIT"
description = "livesplit-hotkey provides cross-platform global hotkey hooks."
keywords = ["speedrun", "timer", "livesplit", "hotkey", "keyboard"]

[target.'cfg(windows)'.dependencies]
winapi = "0.2.8"
user32-sys = "0.2.0"
kernel32-sys = "0.2.2"
parking_lot = "0.4.0"

[target.'cfg(target_os = "linux")'.dependencies]
x11-dl = "2.13.0"
mio = "0.6.6"
promising-future = "0.2.4"

[dependencies]
quick-error = "1.1.0"
