[package]
name = "livesplit-hotkey"
version = "0.4.0"
authors = ["Christopher Serr <christopher.serr@gmail.com>"]
documentation = "https://docs.rs/livesplit-hotkey/"
repository = "https://github.com/LiveSplit/livesplit-core/tree/master/hotkey"
license = "Apache-2.0/MIT"
description = "livesplit-hotkey provides cross-platform global hotkey hooks."
keywords = ["speedrun", "timer", "livesplit", "hotkey", "keyboard"]
edition = "2018"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.2", features = [
    "libloaderapi",
    "processthreadsapi",
    "winuser"
] }
parking_lot = "0.6.4"

[target.'cfg(target_os = "linux")'.dependencies]
x11-dl = "2.18.3"
mio = "0.6.16"
promising-future = "0.2.4"

[target.'cfg(target_os = "emscripten")'.dependencies]
stdweb = "0.3.0"
parking_lot = "0.6.4"

[dependencies]
quick-error = "1.2.2"
serde_derive = "1.0.55"
serde = "1.0.55"
