[package]
name = "cdylib"
version = "0.1.0"
authors = ["Christopher Serr <christopher.serr@gmail.com>"]

[dependencies]
livesplit-core-capi = { path = "..", default-features = false }

[lib]
name = "livesplit_core"
crate-type = ["cdylib"]

[features]
default = ["image-shrinking"]
image-shrinking = ["livesplit-core-capi/image-shrinking"]
