[package]
name = "cdylib"
version = "0.1.0"
authors = ["Christopher Serr <christopher.serr@gmail.com>"]
edition = "2018"

[dependencies]
livesplit-core-capi = { path = "..", default-features = false }

[lib]
name = "livesplit_core"
crate-type = ["cdylib"]

[features]
default = ["image-shrinking"]
image-shrinking = ["livesplit-core-capi/image-shrinking"]
wasm-web = ["livesplit-core-capi/wasm-web"]
