[package]
name = "livesplit-auto-splitting"
version = "0.1.0"
authors = ["Christopher Serr <christopher.serr@gmail.com>"]
documentation = "https://docs.rs/livesplit-auto-splitting/"
repository = "https://github.com/LiveSplit/livesplit-core/tree/master/crates/livesplit-auto-splitting"
license = "MIT OR Apache-2.0"
description = "livesplit-auto-splitting is a library that provides a runtime for running auto splitters that can control a speedrun timer. These auto splitters are provided as WebAssembly modules."
keywords = ["speedrun", "timer", "livesplit", "auto-splitting"]
edition = "2021"
rust-version = "1.82"

[dependencies]
anyhow = { version = "1.0.45", default-features = false }
arc-swap = "1.6.0"
async-trait = "0.1.73"
bstr = "1.10.0"
bytemuck = { version = "1.14.0", features = ["min_const_generics"] }
bytes = "1.6.1"
indexmap = "2.0.2"
proc-maps = { version = "0.4.0", default-features = false }
read-process-memory = { version = "0.1.4", default-features = false }
slotmap = { version = "1.0.2", default-features = false }
snafu = "0.8.0"
sysinfo = { version = "0.32.0", default-features = false, features = [
  "multithread",
  "system",
] }
time = { version = "0.3.3", default-features = false }
wasmtime = { version = "26.0.0", default-features = false, features = [
  "cranelift",
  "gc",
  "parallel-compilation",
  "runtime",
] }
wasmtime-wasi = { version = "26.0.0", default-features = false, features = [
  "preview1",
] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59.0", features = ["Win32_Storage_FileSystem"] }

[features]
default = ["enhanced-backtrace"]
debugger-support = ["wasmtime/debug-builtins"]
enhanced-backtrace = ["wasmtime/addr2line", "wasmtime/demangle"]
