[package]
name = "livesplit-hotkey"
version = "0.6.0"
authors = ["Christopher Serr <christopher.serr@gmail.com>"]
documentation = "https://docs.rs/livesplit-hotkey/"
repository = "https://github.com/LiveSplit/livesplit-core/tree/master/crates/livesplit-hotkey"
license = "Apache-2.0/MIT"
description = "livesplit-hotkey provides cross-platform global hotkey hooks."
keywords = ["speedrun", "timer", "livesplit", "hotkey", "keyboard"]
edition = "2018"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.2", features = [
    "libloaderapi",
    "processthreadsapi",
    "winuser"
], optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
evdev = { version = "=0.12.0", optional = true }
mio = { version = "0.8.0", default-features = false, features = ["os-ext", "os-poll"], optional = true }
promising-future = { version = "0.2.4", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
bitflags = { version = "1.2.1", optional = true }

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
wasm-bindgen = { version = "0.2.54", optional = true }
web-sys = { version = "0.3.28", default-features = false, features = ["Gamepad", "GamepadButton", "EventTarget", "KeyboardEvent", "Navigator", "Window"], optional = true }

[dependencies]
cfg-if = "1.0.0"
serde = { version = "1.0.98", default-features = false, features = ["derive", "alloc"] }
snafu = { version = "0.7.0", default-features = false }

[features]
default = ["std"]
std = ["snafu/std", "serde/std", "evdev", "mio", "promising-future", "winapi", "bitflags"]
wasm-web = ["wasm-bindgen", "web-sys"]
