[package]
name = "livesplit-hotkey"
version = "0.7.0"
authors = ["Christopher Serr <christopher.serr@gmail.com>"]
documentation = "https://docs.rs/livesplit-hotkey/"
repository = "https://github.com/LiveSplit/livesplit-core/tree/master/crates/livesplit-hotkey"
license = "Apache-2.0/MIT"
description = "livesplit-hotkey provides cross-platform global hotkey hooks."
keywords = ["speedrun", "timer", "livesplit", "hotkey", "keyboard"]
edition = "2021"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.2", features = [
    "libloaderapi",
    "processthreadsapi",
    "winuser"
], optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2.7"

[target.'cfg(target_os = "linux")'.dependencies]
evdev = { version = "0.12.1", optional = true }
mio = { version = "0.8.0", default-features = false, features = ["os-ext", "os-poll"], optional = true }
nix = { version = "0.26.1", features = ["user"], optional = true }
promising-future = { version = "0.2.4", optional = true }
x11-dl = { version = "2.20.0", optional = true }

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
wasm-bindgen = { version = "0.2.54", optional = true }
web-sys = { version = "0.3.28", default-features = false, features = ["Gamepad", "GamepadButton", "EventTarget", "KeyboardEvent", "Navigator", "Window"], optional = true }
js-sys = { version = "0.3.28", default-features = false, optional = true }

[dependencies]
cfg-if = "1.0.0"
serde = { version = "1.0.98", default-features = false, features = ["derive", "alloc"] }
snafu = { version = "0.7.0", default-features = false }
bitflags = { version = "1.2.1" }

[features]
default = ["std"]
std = ["snafu/std", "serde/std", "evdev", "mio", "nix", "promising-future", "winapi", "x11-dl"]
wasm-web = ["wasm-bindgen", "web-sys", "js-sys"]
