[package]
name = "livesplit-hotkey"
version = "0.8.0"
authors = ["Christopher Serr <christopher.serr@gmail.com>"]
documentation = "https://docs.rs/livesplit-hotkey/"
repository = "https://github.com/LiveSplit/livesplit-core/tree/master/crates/livesplit-hotkey"
license = "MIT OR Apache-2.0"
description = "livesplit-hotkey provides cross-platform global hotkey hooks."
keywords = ["speedrun", "timer", "livesplit", "hotkey", "keyboard"]
edition = "2024"
rust-version = "1.85"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59.0", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
], optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
crossbeam-channel = { version = "0.5.6", optional = true }
evdev = { version = "0.12.1", optional = true }
mio = { version = "1.0.2", default-features = false, features = [
    "os-ext",
    "os-poll",
], optional = true }
nix = { version = "0.29.0", features = ["user"], optional = true }
promising-future = { version = "0.2.4", optional = true }
x11-dl = { version = "2.20.0", optional = true }

[target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dependencies]
wasm-bindgen = { version = "0.2.54", optional = true }
web-sys = { version = "0.3.65", default-features = false, features = [
    "EventTarget",
    "Gamepad",
    "GamepadButton",
    "KeyboardEvent",
    "Navigator",
    "Window",
], optional = true }
js-sys = { version = "0.3.65", default-features = false, optional = true }

[dependencies]
cfg-if = "1.0.0"
serde = { version = "1.0.186", default-features = false, features = ["alloc"] }
bitflags = "2.0.1"

[features]
default = ["std"]
std = [
    "crossbeam-channel",
    "evdev",
    "mio",
    "nix",
    "promising-future",
    "serde/std",
    "windows-sys",
    "x11-dl",
]
wasm-web = ["wasm-bindgen", "web-sys", "js-sys"]
