[package]
name = "livesplit-title-abbreviations"
version = "0.3.0"
authors = ["Christopher Serr <christopher.serr@gmail.com>"]
documentation = "https://docs.rs/livesplit-title-abbreviations/"
repository = "https://github.com/LiveSplit/livesplit-core/tree/master/crates/livesplit-title-abbreviations"
license = "Apache-2.0/MIT"
description = "livesplit-title-abbreviations encapsulates the algorithm that LiveSplit uses to abbreviate game titles."
keywords = ["speedrun", "timer", "livesplit", "title", "abbreviation"]
edition = "2018"

[dependencies]
unicase = "2.6.0"
