[package]
name = "no-std-test"
version = "0.1.0"
authors = ["Christopher Serr <christopher.serr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[dependencies]
livesplit-core = { path = "../..", default-features = false }

[features]
doesnt-have-atomics = ["livesplit-core/doesnt-have-atomics"]
